# PhantomX

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  pages.yml
blockchain-node/: Dockerfile  config.yaml  go.mod  main.go
blockchain-node/api/: server.go
blockchain-node/consensus/: pos.go
blockchain-node/contracts/: PhantomXToken.sol  VPNNodeRegistry.sol  hardhat.config.js  package.json
blockchain-node/contracts/scripts/: deploy.js
blockchain-node/contracts/test/: PhantomX.test.js
blockchain-node/core/: blockchain.go
blockchain-node/p2p/: network.go
docs/: index.md
docs/api/: index.md
docs/development/: contributing.md
docs/guides/: getting-started.md
python-ai-core/: README.md  main.py  requirements.txt
python-ai-core/auth/: jwt.py
python-ai-core/core/: behavior_analyzer.py  compliance_engine.py  neural_mining.py  optimization_engine.py  performance_analyzer.py  prediction_engine.py  reward_engine.py  rewards.py  risk_engine.py  security_analyzer.py
python-ai-core/database/: db.py  models.py  operations.py
python-ai-core/models/: user.py
python-ai-core/routers/: auth.py  neural_mining.py  optimization.py  prediction.py  reward.py  risk.py
python-ai-core/tests/: conftest.py  test_activity_tracking.py  test_aggregation.py  test_analysis.py  test_analytics.py  test_api.py  test_backup.py  test_compliance.py  test_compression.py  test_conversion.py  test_data_processing.py  test_database.py  test_database_connection.py  test_database_migrations.py  test_database_models.py  test_database_queries.py  test_database_session.py  test_database_transaction.py  test_encoding.py  test_encryption.py  test_export.py  test_filtering.py  test_grouping.py  test_import.py  test_integration.py  test_lineage.py  test_logging.py  test_merging.py  test_models.py  test_monitoring.py  test_neural_mining.py  test_neural_mining_router.py  test_normalization.py  test_notification.py  test_notifications.py  test_optimization.py  test_optimization_engine.py  test_optimization_router.py  test_orchestration.py  test_performance.py  (+23 more)
scripts/: check_docs.py  find_api_files.py  generate_api_docs.py  maintain_api_docs.py  test_api_endpoints.py  validate_api.py  validate_api_docs.py
src/database/: __init__.py  exceptions.py
src/processing/: base.py  examples.py  factory.py  processors.py
src/transformation/: base.py  transformers.py
src/validation/: base.py  examples.py  factory.py  rules.py
tests/: test_database_exceptions.py  test_processors.py  test_transformers.py  test_validation.py
tests/processing/: test_processing.py
tests/validation/: test_validation.py
